--- a/resource/pid.ui
+++ b/resource/pid.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>rqt_drone</string>
+   <string>rqt_PID</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
